--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,9 +1,9 @@
 .header {
     padding: 30px 0;
     color: #ffffff;
-    background-color: #101D42;
+    background-color: #5769a0;
     width: 100%;
     text-align: center;
-    border-bottom: 5px solid #DB162F;
+    border-bottom: 15px solid #d4df73;
     margin-bottom: 10px;
 }
